# ScapeDB

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SQL.g4
include/engine/: defs.h  dml.h  field.h  index.h  iterator.h  layered_manager.h  query.h  query_result.h  record.h  scape_sql.h  system.h  system_manager.h
include/frontend/: frontend.h  scape_visitor.h
include/storage/: btree.h  db_manager.h  defs.h  fastio.h  file_mapping.h  layered_manager.h  paged_buffer.h  serialized_meta.h  storage.h
include/utils/: config.h  logger.h  misc.h
report/: main.tex
src/: main.cpp
src/engine/: defs.cpp  dml.cpp  field.cpp  index.cpp  iterator.cpp  layered_manager.cpp  query.cpp  record.cpp  scape_sql.cpp  system.cpp  system_manager.cpp
src/frontend/: frontend.cpp  parser.cpp  scape_visitor.cpp
src/storage/: btree.cpp  db_manager.cpp  fastio.cpp  file_mapping.cpp  layered_manager.cpp  paged_buffer.cpp
src/utils/: config.cpp  logger.cpp  misc.cpp
test/: database.sql  float_conversion.cpp  storage.cpp  table.sql  test_btree.cpp
test/sql/: database.sql  insert_select.sql  table-2.sql
